--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -126,7 +126,7 @@
                             <tr>
                               <td>
                                 <label>
-                                  <input type="radio" name="entryPlan" value="hoge1" onclick="entryChange1();" checked="checked" />：①はい、いいえで解答
+                                  <input type="radio" name="answertype" value="hoge1" onclick="entryChange1();" checked="checked" />：①はい、いいえで解答
                                 </label>
                               </td>
                             </tr>
@@ -143,7 +143,7 @@
                             </tr>
                             <td>
                               <label>
-                                <input type="radio" name="entryPlan" value="hoge2" onclick="entryChange1();" />：②解答文で解答
+                                <input type="radio" name="answertype" value="hoge2" onclick="entryChange1();" />：②解答文で解答
                               </label>
                             </td>
                             <!-- 表示非表示切り替え -->
@@ -358,7 +358,7 @@
                           <table class="table">
                             <tr>
                               <td>
-                                <label><input type="radio" name="entryPlan2" value="hoge1" onclick="entryChange2();" checked="checked" />：①はい、いいえで解答</label>
+                                <label><input type="radio" name="answertype2" value="hoge1" onclick="entryChange2();" checked="checked" />：①はい、いいえで解答</label>
                               </td>
                             </tr>
                             <!-- 表示非表示切り替え -->
@@ -371,7 +371,7 @@
                               </td>
                             </tr>
                             <td>
-                              <label><input type="radio" name="entryPlan2" value="hoge2" onclick="entryChange2();" />：②解答文で解答</label>
+                              <label><input type="radio" name="answertype2" value="hoge2" onclick="entryChange2();" />：②解答文で解答</label>
                             </td>
                             <!-- 表示非表示切り替え -->
                             <tr id="secondBox2">
