--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -32,9 +32,16 @@
           <li>Cパターン</li>
           <div class="tab-title-bar"></div>
         </ul>
+
+
+
+        {# エラーメッセージ #}
+			  {% if message is not null %}
+        <div class="alert alert-danger" role="alert">
+          <strong>{{message}}</strong>
+        </div>
+			  {% endif %}
         <ul class="tab-contents">
-
-
 
 
           <!--        Aパターン         -->
@@ -70,15 +77,11 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
                               <option value="">選択してください</option>
-                              <option value="1" >ライオン</option>
-                              <option value="2" >ゾウ</option>
-                              <option value="3" >サル</option>
-                              <option value="4" >ピース</option>
-                              <option value="5" >コウモリ</option>
-                              <option value="6" >アライグマ</option>
-                              <option value="7" >キリン</option>
+                              {% for item in area %}
+                              <option value="{{ item['beast_house'] }}" >{{ item['name'] }}</option>
+                              {% endfor %}
                             </select>
                           </div>
                         </div>
@@ -216,7 +219,7 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
         											<option value="">選択してください</option>
         											<option value="1" >ライオン</option>
         											<option value="2" >ゾウ</option>
@@ -236,7 +239,7 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
         											<option value="">選択してください</option>
         											<option value="1" >簡単</option>
         											<option value="2" >普通</option>
@@ -253,7 +256,7 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
         											<option value="">選択してください</option>
         											<option value="1" >10秒</option>
         											<option value="2" >15秒</option>
@@ -310,7 +313,7 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
                               <option value="">選択してください</option>
                               <option value="1" >ライオン</option>
                               <option value="2" >ゾウ</option>
@@ -343,7 +346,7 @@
                       <div class="col-xs-8">
                         <div class="form-inline">
                           <div class="form-group">
-                            <select name="erea" class="form-control" required>
+                            <select name="area" class="form-control" required>
                               <option value="">選択してください</option>
                               <option value="1" >10秒</option>
                               <option value="2" >15秒</option>
