テキストエリアのサイズ拡大制御

--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="form-group"> <label class="control-label col-sm-3">問題文<span class="text-danger">*</span></label>
                       <div class="col-md-8 col-sm-9">
-                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control" required></textarea>
+                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control arearesize" required></textarea>
                       </div>
                     </div>
                     <div class="form-group">
@@ -149,10 +149,10 @@
                             <!-- 表示非表示切り替え -->
                             <tr id="secondBox">
                               <td>
-                                <input type="text" class="form-control correct" name="correct_answer" id="mem_name" placeholder="正解を書いてください" value="">
+                                <input type="text" class="form-control correct" name="correct_answer" id="mem_name" placeholder="正解を書いてください" value="" required>
                               </td>
                               <td>
-                                <input type="text" class="form-control incorrect" name="incorrect_answer" id="mem_name" placeholder="不正解を書いてください" value="">
+                                <input type="text" class="form-control incorrect" name="incorrect_answer" id="mem_name" placeholder="不正解を書いてください" value="" required>
                               </td>
                             </tr>
                           </table>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="form-group"> <label class="control-label col-sm-3">問題解説</label>
                       <div class="col-md-8 col-sm-9">
-                        <textarea name="commentary" id="commentary" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control"></textarea>
+                        <textarea name="commentary" id="commentary" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control arearesize"></textarea>
                       </div>
                     </div>
                     <div class="form-group">
@@ -197,7 +197,7 @@
                     </div>
                     <div class="form-group"> <label class="control-label col-sm-3">問題文<span class="text-danger">*</span></label>
                       <div class="col-md-8 col-sm-9">
-                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control" required></textarea>
+                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control arearesize" required></textarea>
                       </div>
                     </div>
                     <div class="form-group">
@@ -264,7 +264,7 @@
                     </div>
                     <div class="form-group"> <label class="control-label col-sm-3">問題解説</label>
                       <div class="col-md-8 col-sm-9">
-                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control" required></textarea>
+                        <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control arearesize" required></textarea>
                       </div>
                     </div>
                     <div class="form-group">
@@ -295,7 +295,7 @@
                     </div>
                     <div class="form-group">
                       <label class="control-label col-sm-3">問題文<span class="text-danger">*</span></label>
-                      <div class="col-md-8 col-sm-9"> <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control" required></textarea> </div>
+                      <div class="col-md-8 col-sm-9"> <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題文を書いてください" class="form-control arearesize" required></textarea> </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-sm-3">問題画像<span class="text-danger">*</span><br></label>
@@ -388,7 +388,7 @@
                     </div>
 
                     <div class="form-group"> <label class="control-label col-sm-3">問題解説</label>
-                      <div class="col-md-8 col-sm-9"> <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control"></textarea> </div>
+                      <div class="col-md-8 col-sm-9"> <textarea name="introduction" id="mem_name" cols="45" rows="8" placeholder="問題の解説を書いてください" class="form-control arearesize"></textarea> </div>
                     </div>
                     <div class="form-group">
                       <div class="col-xs-offset-3 col-xs-10"> <input name="Submit" type="submit" value="作成" class="btn btn-primary"> </div>
