--- a/public/css/management/makeQuestion.css
+++ b/public/css/management/makeQuestion.css
@@ -201,3 +201,8 @@ article.selected {
 .incorrect {
   background-color: #F6CECE;
 }
+.arearesize {  
+    resize: vertical;
+    overflow: auto;
+    height: 100px;
+}
