--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -8,11 +8,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_multi.css">
     <title>複数で遊ぶ</title>
 </head>
 <body>
     <h1>（テストタイトル）複数で遊ぶ</h1>
 
+	<section id="sec01">
+		<ul id="slider" class="questionImg">
+			<li>
+				<img src="../../public/images/web/dummy.png" alt="">
+			</li>
+<!--
+			<li>
+				<img src="../../public/images/web/dummy.png" alt="">
+			</li>
+-->
+		</ul>
+		<div class="questionArea">
+			<p class="tC">第<span class="questionNo">1</span>問</p>
+			<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
+		</div>
+		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div id="time"><div id="timebar"></div></div>
+		</div>
+		<div class="playerArea">
+			<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
+			<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
+		</div>
+		<ul class="answerArea">
+			<li>
+				<button type="button" id="correct" class="answerBtn" value=""></button>
+			</li>
+			<li>
+				<button type="button" id="incorrect" class="answerBtn" value=""></button>
+			</li>
+		</ul>
+	</section>
+<!--	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>-->
 </body>
 </html>
