--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -10,20 +10,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_multi.css">
-    <title>複数で遊ぶ</title>
+    <title>めざせ！とべマスター</title>
 </head>
 <body>
-    <h1>（テストタイトル）複数で遊ぶ</h1>
+	<!-- プレイヤー確認画面 -->
+	<div id="confirm">
+		<h1>プレイヤー確認</h1>
+		<div class="playerArea">
+			<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
+			<p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
+		</div>
+		<div class="next">
+			<button type="button" class="btnStyle03" value="">はい</button>
+		</div>
+	</div>
 
-	<section id="sec01">
-		<ul id="slider" class="questionImg">
+	<!-- クイズ出題画面 -->
+	<div id="sec01">
+		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
-<!--
-			<li>
-				<img src="../../public/images/web/dummy.png" alt="">
-			</li>
+			<!--
+<li>
+<img src="../../public/images/web/dummy.png" alt="">
+</li>
 -->
 		</ul>
 		<div class="questionArea">
@@ -39,13 +50,68 @@
 		</div>
 		<ul class="answerArea">
 			<li>
-				<button type="button" id="correct" class="answerBtn" value=""></button>
+				<button type="button" id="correct" class="answerBtn btnStyle01" value=""></button>
 			</li>
 			<li>
-				<button type="button" id="incorrect" class="answerBtn" value=""></button>
+				<button type="button" id="incorrect" class="answerBtn btnStyle02" value=""></button>
 			</li>
 		</ul>
-	</section>
+	</div>
+
+	<!-- 解答画面 -->
+	<div id="sec02">
+		<ul class="slider questionImg">
+			<li>
+				<img src="../../public/images/web/dummy.png" alt="">
+			</li>
+			<!--
+<li>
+<img src="../../public/images/web/dummy.png" alt="">
+</li>
+-->
+		</ul>
+		<div class="questionArea">
+			<p class="tC">第<span class="questionNo">1</span>問</p>
+			<p class="questionText">正解は…</p>
+		</div>
+		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div id="time"><div id="timebar"></div></div>
+		</div>
+		<div class="correctArea">
+			<p class="answerBtn btnStyle02">あああああ</p>
+		</div>
+		<div class="next">
+			<button type="button" class="btnStyle03" value="">次へ</button>
+		</div>
+	</div>
+
+	<!-- 解説画面 -->
+	<div id="sec03">
+		<ul class="slider questionImg">
+			<li>
+				<img src="../../public/images/web/dummy.png" alt="">
+			</li>
+			<!--
+<li>
+<img src="../../public/images/web/dummy.png" alt="">
+</li>
+-->
+		</ul>
+		<div class="questionArea">
+			<p class="tC">第<span class="questionNo">1</span>問</p>
+			<p class="questionText">正解は…</p>
+		</div>
+		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div id="time"><div id="timebar"></div></div>
+		</div>
+		<div class="correctArea">
+			<p class="answerBtn btnStyle02">あああああ</p>
+		</div>
+		<div class="next">
+			<button type="button" class="btnStyle03" value="">次へ</button>
+		</div>
+	</div>
+	
 <!--	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>-->
 </body>
 </html>
