--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -13,8 +13,27 @@
     <title>めざせ！とべマスター</title>
 </head>
 <body>
+	<!-- 人数選択画面 -->
+	<div class="playerDecide">
+		<ul class="slider playerList">
+			<li>
+				<img src="../../public/images/web/ico_penguin01.png" srcset="../../public/images/web/ico_penguin01@2x.png 2x, ../../public/images/web/ico_penguin01@3x.png 3x" alt="">
+			</li>
+			<li>
+				<img src="../../public/images/web/ico_bear01.png" srcset="../../public/images/web/ico_bear01@2x.png 2x, ../../public/images/web/ico_bear01@3x.png 3x" alt="">
+			</li>
+		</ul>
+		<ul class="btnList01">
+			<li><button type="button" class="btnStyle04 minus" value="">減らす</button></li>
+			<li><button type="button" class="btnStyle04 plus" value="">増やす</button></li>
+		</ul>
+		<div class="next">
+			<button type="button" class="btnStyle03" value="">ゲームを開始する</button>
+		</div>
+	</div>
+	
 	<!-- プレイヤー確認画面 -->
-	<div id="confirm">
+	<div class="playerConfirm">
 		<h1>プレイヤー確認</h1>
 		<div class="playerArea">
 			<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
@@ -26,23 +45,18 @@
 	</div>
 
 	<!-- クイズ出題画面 -->
-	<div id="sec01">
+	<div class="sec01">
 		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
-			<!--
-<li>
-<img src="../../public/images/web/dummy.png" alt="">
-</li>
--->
 		</ul>
 		<div class="questionArea">
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
 		</div>
-		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div id="time"><div id="timebar"></div></div>
+		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div class="time"><div class="timebar"></div></div>
 		</div>
 		<div class="playerArea">
 			<p><img src="../../public/images/web/ico_animal01.png" alt="" class="icon"></p>
@@ -59,23 +73,18 @@
 	</div>
 
 	<!-- 解答画面 -->
-	<div id="sec02">
+	<div class="sec02">
 		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
-			<!--
-<li>
-<img src="../../public/images/web/dummy.png" alt="">
-</li>
--->
 		</ul>
 		<div class="questionArea">
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">正解は…</p>
 		</div>
-		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div id="time"><div id="timebar"></div></div>
+		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div class="time"><div class="timebar"></div></div>
 		</div>
 		<div class="correctArea">
 			<p class="answerBtn btnStyle02">あああああ</p>
@@ -86,23 +95,18 @@
 	</div>
 
 	<!-- 解説画面 -->
-	<div id="sec03">
+	<div class="sec03">
 		<ul class="slider questionImg">
 			<li>
 				<img src="../../public/images/web/dummy.png" alt="">
 			</li>
-			<!--
-<li>
-<img src="../../public/images/web/dummy.png" alt="">
-</li>
--->
 		</ul>
 		<div class="questionArea">
 			<p class="tC">第<span class="questionNo">1</span>問</p>
 			<p class="questionText">正解は…</p>
 		</div>
-		<div id="time" style="width:100%;height:100%;background-color:white;z-index:9">
-			<div id="time"><div id="timebar"></div></div>
+		<div class="time" style="width:100%;height:100%;background-color:white;z-index:9">
+			<div class="time"><div class="timebar"></div></div>
 		</div>
 		<div class="correctArea">
 			<p class="answerBtn btnStyle02">あああああ</p>
