--- a/templates/management/makeQuestion.html
+++ b/templates/management/makeQuestion.html
@@ -34,7 +34,6 @@
         </ul>
 
 
-
         {# エラーメッセージ #}
 			  {% if message is not null %}
         <div class="alert alert-danger" role="alert">
@@ -43,6 +42,7 @@
 			  {% endif %}
         <ul class="tab-contents">
 
+          <p>サンプルテキストエリアのrequired属性の値：<span id="sampleOutput"></span></p>
 
           <!--        Aパターン         -->
           <li class="active">
